--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node --project tsconfig.json ./src/index.ts",
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "eddy": "ts-node --project tsconfig.json ./src/eddyimport.ts"
   },
   "author": "Steven Sederburg (stevens@cloudspacestudio.com)",
   "license": "ISC",
