--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.13.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
@@ -36,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongodb": "^4.0.6",
     "@types/mssql": "^9.1.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.0",
     "@types/pg": "^8.11.10",
     "@types/uuid": "^10.0.0"
